setup-scripts/62-wordpress/wordpress-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: wordpress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production  
  labels:
    app: wordpress
spec:
  ingressClassName: nginx
  tls:
    - secretName: wordpress-ssl
      hosts:
      - wordpress.vps-2.cluster-4.de          
  rules:
  - host: "wordpress.vps-2.cluster-4.de"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: wordpress
              port:
                number: 80
